updated book in general

--- a/01-gettingstarted.Rmd
+++ b/01-gettingstarted.Rmd
@@ -39,7 +39,7 @@ Let's go ahead and boot up RStudio and see how she looks!
 
 ## The four RStudio Windows {#INSTALL-GET-FAMILIAR}
 
-When you open RStudio, you'll see the following four windows (also called panes) shown in in Figure \@ref(fig:rstudiowindows). However, your windows might be in a different order that those in Figure \@ref(fig:rstudiowindows). 
+When you open RStudio, you'll see the following four windows (also called panes) shown in in Figure \@ref(fig:rstudiowindows). However, your windows might be in a different order that those in Figure \@ref(fig:rstudiowindows). Ignore for a fact that my screen shows black and yours shows up as white. This is like the wall paper on your computer, it is what makes my eyes at ease.
 
 
 ```{r rstudiowindows, fig.cap= "The four panes of RStudio.", fig.margin = TRUE, echo = FALSE, out.width = "100%", fig.align="center"}
